sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:15: error: too many arguments for method getValeur: (x$1: Int)Int
	getValeur(j,v);	
                 ^